Am adaugat 2 teste la muschii

--- a/exerciti.html
+++ b/exerciti.html
@@ -51,7 +51,7 @@
      <section id="muschi">
             <div class="carousel1" id="carousel1">
                 <a href="test1m.html"><img src="m1.png" class="slide active"></a>
-                <a href="#"><img src="m2.png" class="slide"></a>
+                <a href="test2m.html"><img src="m2.png" class="slide"></a>
                 <a href="#"><img src="m3.png" class="slide"></a>
                 <a href="#"><img src="m4.png" class="slide"></a>
                 <a href="#"><img src="m5.png" class="slide"></a>
