--- a/test1m.html
+++ b/test1m.html
@@ -28,21 +28,21 @@
     <div class="cutie">
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Din ce oase este alcătuit neurocraniul?</p>
-      <p class="rasr" data-correct="A">A) Frontal, etmoid, sfenoid, occipital, temporale, parietale</p>
-      <p class="rasr" >B) Maxilare, palatine, nazale, lacrimale, zigomatice</p>
-      <p class="rasr" >C) Femur, tibie, fibulă, humerus</p>
-      <p class="rasr" >D) Stern, scapulă, coxal</p>
+      <p class="intrebare">Care este cel mai mare mușchi din corpul uman?</p>
+      <p class="rasr" data-correct="A">A) Bicepsul brahial</p>
+      <p class="rasr" >B) Trapezul</p>
+      <p class="rasr" >C) Gluteus maximus</p>
+      <p class="rasr" >D) Deltoidul</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
         </div>
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Câte perechi de coaste are scheletul uman?</p>
-      <p class="rasr" data-correct="A">A) 10</p>
-      <p class="rasr" >B) 12</p>
-      <p class="rasr" >C) 7</p>
-      <p class="rasr" >D) 14</p>
+      <p class="intrebare">Ce tip de țesut muscular este controlat voluntar?</p>
+      <p class="rasr" data-correct="A">A) Musculatura netedă</p>
+      <p class="rasr" >B) Musculatura cardiacă</p>
+      <p class="rasr" >C) Musculatura striată scheletică</p>
+      <p class="rasr" >D) Musculatura viscerală</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
       </div>
@@ -52,19 +52,19 @@
         <div class="coloane">
           <h3 class="coloaneenume">Coloana A</h3>
           <div class="scris2">
-            <p class="optiuni" >1.Femur<input type="text" id="match1" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">2.Parietal<input type="text" id="match2" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">3.Carpiene<input type="text" id="match3" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">4.Rotula<input type="text" id="match4" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni" >1.Mușchi neted<input type="text" id="match1" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">2.Mușchi cardiac<input type="text" id="match2" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">3.Mușchi scheletic<input type="text" id="match3" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">4.Sarcomer<input type="text" id="match4" class="match-box" placeholder="Ex: B"></p>
           </div>
         </div>
         <div class="coloane">
           <h3 class="coloanenume">Coloana B</h3>
           <div class="scris2">
-            <p class="optiuni">a.Oase late</p>
-            <p class="optiuni">b.Oase lungi</p>
-            <p class="optiuni">c.Oase scurte</p>
-            <p class="optiuni">d.Oase sesamoide</p>
+            <p class="optiuni">a.Se găsește doar în inimă</p>
+            <p class="optiuni">b.Se atașează de oase și </br>permite mișcarea</p>
+            <p class="optiuni">c.Funcționează involuntar,</br> se află în pereții organelor</p>
+            <p class="optiuni">d.Unitatea structurală a </br>contracției musculare</p>
           </div>
         </div>
       </div>
@@ -72,41 +72,41 @@
       <div class="linie"></div>
      <div class="cuti1">
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Ce rol are coloana vertebrală?</p>
-      <p class="rasr" >A) Protejează măduva spinării</p>
-      <p class="rasr" data-correct="B">B) Susține corpul</p>
-      <p class="rasr" >C) Permite mișcarea trunchiului</p>
-      <p class="rasr" >D) Toate cele de mai sus</p>
+      <p class="intrebare">Ce mineral este esențial pentru contracția musculară?</p>
+      <p class="rasr" >A) Fier</p>
+      <p class="rasr" data-correct="B">B) Calciu</p>
+      <p class="rasr" >C) Sodiu</p>
+      <p class="rasr" >D) Zinc</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
      </div>
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Ce oase alcătuiesc viscerocraniul?</p>
-      <p class="rasr" data-correct="A">A) Maxilare, palatine, nazale, lacrimale, zigomatice,<br>cornetele nazale inferioare, vomerul, mandibula</p>
-      <p class="rasr" >B) Frontal, etmoid, sfenoid, occipital</p>
-      <p class="rasr" >C) Stern, coaste, claviculă</p>
-      <p class="rasr" >D) Femur, tibie, fibulă</p>
+      <p class="intrebare">Care dintre următoarele este o funcție principală a mușchilor?</p>
+      <p class="rasr" data-correct="A">A) Digestia alimentelor</p>
+      <p class="rasr" >B) Producerea de celule roșii</p>
+      <p class="rasr" >C) Mișcarea și menținerea posturii</p>
+      <p class="rasr" >D) Reglarea temperaturii corpului</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
         </div>
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Ce coaste se numesc „false"?</p>
-      <p class="rasr" data-correct="A">A) Primele 7 perechi</p>
-      <p class="rasr" >B) Perechile VIII, IX, X</p>
-      <p class="rasr" >C) Ultimele 2 perechi</p>
-      <p class="rasr" >D) Toate coastele</p>
+      <p class="intrebare">Cum se numește unitatea structurală și funcțională a mușchiului?</p>
+      <p class="rasr" data-correct="A">A) Neuron</p>
+      <p class="rasr" >B) Miofibrilă</p>
+      <p class="rasr" >C) Sarcomer</p>
+      <p class="rasr" >D) Ligament</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
     </div>
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Ce oase alcătuiesc bazinul?</p>
-      <p class="rasr" data-correct="A">A) Femurul și tibia</p>
-      <p class="rasr" >B) Clavicula și scapula</p>
-      <p class="rasr" >C) Osul sacru și oasele coxale</p>
-      <p class="rasr" >D) Sternul și coastele</p>
+      <p class="intrebare">Care dintre următorii mușchi este un mușchi involuntar?</p>
+      <p class="rasr" data-correct="A">A) Biceps brahial</p>
+      <p class="rasr" >B) Triceps brahial</p>
+      <p class="rasr" >C) Miocardul</p>
+      <p class="rasr" >D) Quadriceps</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
      </div>
@@ -115,19 +115,19 @@
         <div class="coloane">
           <h3 class="coloanenume">Coloana A</h3>
           <div class="coloane-content">
-            <p class="optiuni">1.Radius<input type="text" id="match5" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">2.Scapula<input type="text" id="match6" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">3.Carpiene<input type="text" id="match7" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">4.Stern<input type="text" id="match8" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">1.Menținerea posturii<input type="text" id="match5" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">2.Mișcare<input type="text" id="match6" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">3.Termoreglare<input type="text" id="match7" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">4.Protecția organelor<input type="text" id="match8" class="match-box" placeholder="Ex: B"></p>
           </div>
         </div>
         <div class="coloane">
           <h3 class="coloane-title">Coloana B</h3>
           <div class="coloane-content">
-            <p class="optiuni">a.Os lung</p>
-            <p class="optiuni">b.Os lat</p>
-            <p class="optiuni">c.Oase scurte</p>
-            <p class="optiuni">d.Os lat</p>
+            <p class="optiuni">a.Permite deplasarea corpului</p>
+            <p class="optiuni">b.Produce căldură prin contracții</p>
+            <p class="optiuni">c.Susține poziția corectă a corpului</p>
+            <p class="optiuni">d.Absoarbe șocurile și previne leziunile</p>
           </div>
         </div>
       </div><button class="check-btn" onclick="checkMatching2()">✔ verifica</button>
@@ -135,21 +135,21 @@
   
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Ce rol are osul sacru?</p>
-      <p class="rasr" data-correct="A">A) Protejează creierul</p>
-      <p class="rasr" >B) Se articulează cu oasele coxale</p>
-      <p class="rasr" >C) Formează coloana cervicală</p>
-      <p class="rasr" >D) Ajută la digestie</p>
+      <p class="intrebare">Ce substanță este necesară pentru a furniza energie mușchilor?e rol are osul sacru?</p>
+      <p class="rasr" data-correct="A">A) ADN</p>
+      <p class="rasr" >B) ATP</p>
+      <p class="rasr" >C) ARN</p>
+      <p class="rasr" >D) Colagen</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
     </div>
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
-      <p class="intrebare">Ce curbură a coloanei are concavitatea posterioară?</p>
-      <p class="rasr" data-correct="A">A) Lordoză</p>
-      <p class="rasr" >B) Cifoză</p>
-      <p class="rasr" >C) Scolioză</p>
-      <p class="rasr" >D) Niciuna dintre cele de mai sus</p>
+      <p class="intrebare">Ce proces apare atunci când un mușchi rămâne contractat fără să se relaxeze?</p>
+      <p class="rasr" data-correct="A">A) Tetanos muscular</p>
+      <p class="rasr" >B) Hipertrofie</p>
+      <p class="rasr" >C) Atrofie</p>
+      <p class="rasr" >D) Reflex muscular</p>
       <button class="verifca">✔ Verifica</button>
     </div>
     </div>
