--- a/exerciti.html
+++ b/exerciti.html
@@ -53,8 +53,8 @@
                 <a href="test1m.html"><img src="m1.png" class="slide active"></a>
                 <a href="test2m.html"><img src="m2.png" class="slide"></a>
                 <a href="test3m.html"><img src="m3.png" class="slide"></a>
-                <a href="#"><img src="m4.png" class="slide"></a>
-                <a href="#"><img src="m5.png" class="slide"></a>
+                <a href="test4m.html"><img src="m4.png" class="slide"></a>
+                <a href="test5m.html"><img src="m5.png" class="slide"></a>
                 <a href="#"><img src="m6.png" class="slide"></a>
             </div>
             <div class="dots1">
