Am adaugat inca 1 test

--- a/exerciti.html
+++ b/exerciti.html
@@ -55,7 +55,7 @@
                 <a href="test3m.html"><img src="m3.png" class="slide"></a>
                 <a href="test4m.html"><img src="m4.png" class="slide"></a>
                 <a href="test5m.html"><img src="m5.png" class="slide"></a>
-                <a href="#"><img src="m6.png" class="slide"></a>
+                <a href="test6m.html"><img src="m6.png" class="slide"></a>
             </div>
             <div class="dots1">
                 <span class="dot1 active" onclick="setSlide(0)"></span>
