am facut lectia clasa muschi

--- a/articulati.html
+++ b/articulati.html
@@ -121,9 +121,12 @@
     ligamente articulare.
 </p>
 
-
-
+<img class="articulatii1" src="articulati1.png">
+<img class="articulatii2" src="cap1.png">
+<img class="articulatii3" src="articulati2.png">
+<img class="articulatii4" src="amfitroze1.png">
 </div>
+<img class="articulatii5" src="genunchi.png">
 <div class="cutietitlu"></div>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
