--- a/clasmus.html
+++ b/clasmus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>schelete</title>
-    <link rel="stylesheet" href="fiziologiestyle.css">
+    <link rel="stylesheet" href="clasmus.css">
 </head>
 <body>
     <header class="header">
@@ -64,42 +64,74 @@
 
     </div>
  <div class="titluc">
-    <h1>Fiziologia mușchilor scheletici</h1>
+    <h1>Clasificarea mușchilor scheletici</h1>
  </div>
+ <img class="titlupoz" src="mushcelt.png">
 
-
-<img class="muschifiz" src="muschifiz.png">
-
-
-<div class="cutie2">
-    <p>Mușchii scheletici asigură tonusul, postura, echilibrul, mimica și mișcările voluntare. </p>
+<div class="cutie1">
+    <h1>Sistemul muscular</h1>
+    <p> este format din mușchi, care sunt organele active ale mișcării. Acest rol este realizat de către musculatura scheletică — somatică — având în structura sa țesut muscular striat.</p>
 </div>
-
-
-<div class="cutie3">
-    <img class="postura" src="postura.png">
-</div>
-
-
 <div class="linie1">
 </div>
+ <div class="linie2">
+ </div>
+ <p class="p1">Mușchii au forme variate. Se descriu:</p>
+
+<div class="cutie2">
+    <p>mușchi fusiformi:
+        <br>
+        --biceps;
+        <br>
+        --triceps;</p>
+        <img class="biceps" src="bicepstriceps.png">
+</div>
+<div class="cutie3">
+    <p>mușchi triunghiulari:
+        <br>
+        --piramidalul abdomenului;</p>
+        <img class="tring" src="tring.png"> 
+</div>
+
 
 <div class="cutie4">
-    <h1>Mușchiul striat somatic</h1>
+    <p>mușchi de formă patrulateră: 
+        <br>
+        --marele drept abdominal;
+        <br>
+        --marele dorsal;</p>
+        <img class="abdominal" src="abdominal.png">
+        <img class="spate" src="dorsal.png">
+</div>
+
+<img class="diaf" src="diaf.jpg">
+<p class="p2">mușchi în formă de cupolă:
+    <br> 
+    --diafragma;</p>
+
+<p class="p3">mușchi în formă de trapez:
     <br>
-    <p>este componenta efectorie a reflexelor somatice de tonus, postură, echilibru și redresare, precum și a activității motorii voluntare, a expresiei stărilor afectiv-emoționale și a limbajului.</p>
-<img class="brat" src="muschifiz2.png">
+    --mușchiul trapez;</p>
+
+<img class="img1" src="trap.png">
+
+
+<div class="ochi">
+    <p>mușchi circulari:
+        <br>
+        -- orbicularul buzelor;
+        <br>
+        -- cel al pleoapelor, sfincterele.</p>
 </div>
 
 
-<div class="cutie5">
-    <p>Mușchii scheletici reprezintă aproximativ 40% din masa organismului.</p>
-    <div class="cerc1">
-    </div>
+<div class="pozaoc">
+    <img class="ochipoz" src="ochi1.png">
 </div>
 
 
 
-    <script src="scriptsidebar.js"></script>
-    <script src="script.js"></script>
+
+ <script src="scriptsidebar.js"></script>
+ <script src="script.js"></script>
 </body>
