--- a/strct-musch.html
+++ b/strct-musch.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!DOCTYPE html>
 <html lang="ro">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>schelete</title>
-    <link rel="stylesheet" href="fiziologiestyle.css">
+    <link rel="stylesheet" href="strct.css">
 </head>
 <body>
     <header class="header">
@@ -63,43 +71,52 @@
 
 
     </div>
- <div class="titluc">
-    <h1>Fiziologia mușchilor scheletici</h1>
- </div>
 
 
-<img class="muschifiz" src="muschifiz.png">
+
+      <h1>Principalele grupe de mușchi scheletici</h1>
 
 
-<div class="cutie2">
-    <p>Mușchii scheletici asigură tonusul, postura, echilibrul, mimica și mișcările voluntare. </p>
-</div>
+          <div class="cutie1">
+            <p>
+                Mușchii scheletici sunt grupați în mușchii capului, gâtului, trunchiului și membrelor .
+
+            </p>
+          </div>
 
 
-<div class="cutie3">
-    <img class="postura" src="postura.png">
-</div>
 
 
-<div class="linie1">
-</div>
-
-<div class="cutie4">
-    <h1>Mușchiul striat somatic</h1>
-    <br>
-    <p>este componenta efectorie a reflexelor somatice de tonus, postură, echilibru și redresare, precum și a activității motorii voluntare, a expresiei stărilor afectiv-emoționale și a limbajului.</p>
-<img class="brat" src="muschifiz2.png">
-</div>
 
 
-<div class="cutie5">
-    <p>Mușchii scheletici reprezintă aproximativ 40% din masa organismului.</p>
-    <div class="cerc1">
-    </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
+
+
 </body>
+</html>
