Am modificat raspunsulurile  la 3 teste

--- a/test1s.html
+++ b/test1s.html
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce rol are coloana vertebrală?</p>
       <p class="rasr" >A) Protejează măduva spinării</p>
-      <p class="rasr" data-correct="B">B) Susține corpul</p>
+      <p class="rasr" data-correct="D">B) Susține corpul</p>
       <p class="rasr" >C) Permite mișcarea trunchiului</p>
       <p class="rasr" >D) Toate cele de mai sus</p>
       <button class="verifca">✔ Verifica</button>
@@ -93,7 +93,7 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce coaste se numesc „false"?</p>
-      <p class="rasr" data-correct="A">A) Primele 7 perechi</p>
+      <p class="rasr" data-correct="B">A) Primele 7 perechi</p>
       <p class="rasr" >B) Perechile VIII, IX, X</p>
       <p class="rasr" >C) Ultimele 2 perechi</p>
       <p class="rasr" >D) Toate coastele</p>
@@ -103,7 +103,7 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce oase alcătuiesc bazinul?</p>
-      <p class="rasr" data-correct="A">A) Femurul și tibia</p>
+      <p class="rasr" data-correct="C">A) Femurul și tibia</p>
       <p class="rasr" >B) Clavicula și scapula</p>
       <p class="rasr" >C) Osul sacru și oasele coxale</p>
       <p class="rasr" >D) Sternul și coastele</p>
@@ -118,7 +118,7 @@
             <p class="optiuni">1.Radius<input type="text" id="match5" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">2.Scapula<input type="text" id="match6" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">3.Carpiene<input type="text" id="match7" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">4.Stern<input type="text" id="match8" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">4.Temporal<input type="text" id="match8" class="match-box" placeholder="Ex: B"></p>
           </div>
         </div>
         <div class="coloane">
@@ -127,7 +127,7 @@
             <p class="optiuni">a.Os lung</p>
             <p class="optiuni">b.Os lat</p>
             <p class="optiuni">c.Oase scurte</p>
-            <p class="optiuni">d.Os lat</p>
+            <p class="optiuni">d.Os pereche</p>
           </div>
         </div>
       </div><button class="check-btn" onclick="checkMatching2()">✔ verifica</button>
@@ -136,7 +136,7 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce rol are osul sacru?</p>
-      <p class="rasr" data-correct="A">A) Protejează creierul</p>
+      <p class="rasr" data-correct="B">A) Protejează creierul</p>
       <p class="rasr" >B) Se articulează cu oasele coxale</p>
       <p class="rasr" >C) Formează coloana cervicală</p>
       <p class="rasr" >D) Ajută la digestie</p>
@@ -146,7 +146,7 @@
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce curbură a coloanei are concavitatea posterioară?</p>
-      <p class="rasr" data-correct="A">A) Lordoză</p>
+      <p class="rasr" data-correct="B">A) Lordoză</p>
       <p class="rasr" >B) Cifoză</p>
       <p class="rasr" >C) Scolioză</p>
       <p class="rasr" >D) Niciuna dintre cele de mai sus</p>
