Am modificat raspunsulurile  la 2 teste

--- a/test1m.html
+++ b/test1m.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este cel mai mare mușchi din corpul uman?</p>
-      <p class="rasr" data-correct="A">A) Bicepsul brahial</p>
+      <p class="rasr" data-correct="C">A) Bicepsul brahial</p>
       <p class="rasr" >B) Trapezul</p>
       <p class="rasr" >C) Gluteus maximus</p>
       <p class="rasr" >D) Deltoidul</p>
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce tip de țesut muscular este controlat voluntar?</p>
-      <p class="rasr" data-correct="A">A) Musculatura netedă</p>
+      <p class="rasr" data-correct="C">A) Musculatura netedă</p>
       <p class="rasr" >B) Musculatura cardiacă</p>
       <p class="rasr" >C) Musculatura striată scheletică</p>
       <p class="rasr" >D) Musculatura viscerală</p>
@@ -83,9 +83,9 @@
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care dintre următoarele este o funcție principală a mușchilor?</p>
-      <p class="rasr" data-correct="A">A) Digestia alimentelor</p>
+      <p class="rasr" data-correct="A">A) Mișcarea și menținerea posturii</p>
       <p class="rasr" >B) Producerea de celule roșii</p>
-      <p class="rasr" >C) Mișcarea și menținerea posturii</p>
+      <p class="rasr" >C) Digestia alimentelor</p>
       <p class="rasr" >D) Reglarea temperaturii corpului</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
@@ -93,17 +93,17 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Cum se numește unitatea structurală și funcțională a mușchiului?</p>
-      <p class="rasr" data-correct="A">A) Neuron</p>
+      <p class="rasr" data-correct="D">A) Neuron</p>
       <p class="rasr" >B) Miofibrilă</p>
-      <p class="rasr" >C) Sarcomer</p>
-      <p class="rasr" >D) Ligament</p>
+      <p class="rasr" >C) Ligament</p>
+      <p class="rasr" >D) Sarcomer</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
     </div>
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care dintre următorii mușchi este un mușchi involuntar?</p>
-      <p class="rasr" data-correct="A">A) Biceps brahial</p>
+      <p class="rasr" data-correct="C">A) Biceps brahial</p>
       <p class="rasr" >B) Triceps brahial</p>
       <p class="rasr" >C) Miocardul</p>
       <p class="rasr" >D) Quadriceps</p>
@@ -115,12 +115,12 @@
         <div class="coloane">
           <h3 class="coloanenume">Coloana A</h3>
           <div class="coloane-content">
-            <p class="optiuni">1.Menținerea posturii<input type="text" id="match5" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">2.Mișcare<input type="text" id="match6" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">1.Mișcare<input type="text" id="match5" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">2.Menținerea posturii<input type="text" id="match6" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">3.Termoreglare<input type="text" id="match7" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">4.Protecția organelor<input type="text" id="match8" class="match-box" placeholder="Ex: B"></p>
           </div>
-        </div>
+        </div>  
         <div class="coloane">
           <h3 class="coloane-title">Coloana B</h3>
           <div class="coloane-content">
@@ -136,7 +136,7 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce substanță este necesară pentru a furniza energie mușchilor?e rol are osul sacru?</p>
-      <p class="rasr" data-correct="A">A) ADN</p>
+      <p class="rasr" data-correct="B">A) ADN</p>
       <p class="rasr" >B) ATP</p>
       <p class="rasr" >C) ARN</p>
       <p class="rasr" >D) Colagen</p>
@@ -156,6 +156,6 @@
   </div>
 
   <script src="scripthub.js"></script>
-  <script src="scriptexerciti.js"></script>
+  <script src="scriptexercitiT1M.js"></script>
 </body>
 </html>
