--- a/test2s.html
+++ b/test2s.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce oase alcătuiesc coloana vertebrală?</p>
-      <p class="rasr" data-correct="A">A) Femur, tibie, humerus</p>
+      <p class="rasr" data-correct="B">A) Femur, tibie, humerus</p>
       <p class="rasr" >B) Vertebre cervicale, toracale, lombare, sacrale, coccigiene</p>
       <p class="rasr" >C) Frontal, parietal, occipital</p>
       <p class="rasr" >D) Radius, ulna, carpiene</p>
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Câte regiuni are coloana vertebrală?</p>
-      <p class="rasr" data-correct="A">A) 3</p>
+      <p class="rasr" data-correct="B">A) 3</p>
       <p class="rasr" >B) 5</p>
       <p class="rasr" >C) 7</p>
       <p class="rasr" >D) 4</p>
@@ -52,7 +52,7 @@
         <div class="coloane">
           <h3 class="coloaneenume">Coloana A</h3>
           <div class="scris2">
-            <p class="optiuni" >1.Humerus<input type="text" id="match1" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni" >1.Falange<input type="text" id="match1" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">2.Stern<input type="text" id="match2" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">3.Tibie<input type="text" id="match3" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">4.Mandibula<input type="text" id="match4" class="match-box" placeholder="Ex: B"></p>
@@ -61,7 +61,7 @@
         <div class="coloane">
           <h3 class="coloanenume">Coloana B</h3>
           <div class="scris2">
-            <p class="optiuni">a.Oase lungi</p>
+            <p class="optiuni">a.Oase scurt</p>
             <p class="optiuni">b.Oase late</p>
             <p class="optiuni">c.Oase lungi</p>
             <p class="optiuni">d.Oase nepereche</p>
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce os se află în tendonul cvadricepsului femural?</p>
       <p class="rasr" >A) Rotula</p>
-      <p class="rasr" data-correct="B">B) Humerus</p>
+      <p class="rasr" data-correct="A">B) Humerus</p>
       <p class="rasr" >C) Tibia</p>
       <p class="rasr" >D) Sternul</p>
       <button class="verifca">✔ Verifica</button>
@@ -83,7 +83,7 @@
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Cum se numesc vertebrele din regiunea lombară?</p>
-      <p class="rasr" data-correct="A">A) Cervicale</p>
+      <p class="rasr" data-correct="D">A) Cervicale</p>
       <p class="rasr" >B) Toracale</p>
       <p class="rasr" >C) Sacrale</p>
       <p class="rasr" >D) Lombare</p>
@@ -93,8 +93,8 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce oase se află în scheletul brațului?</p>
-      <p class="rasr" data-correct="A">A) Humerus</p>
-      <p class="rasr" >B) Radius</p>
+      <p class="rasr" data-correct="B">A) Radius</p>
+      <p class="rasr" >B) Humerus</p>
       <p class="rasr" >C) Ulna</p>
       <p class="rasr" >D) Toate cele de mai sus</p>
       <button class="verifca">✔ Verifica</button>
@@ -136,9 +136,9 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce perechi de coaste se articulează direct cu sternul?</p>
-      <p class="rasr" data-correct="A">A) Primele 7 perechi</p>
+      <p class="rasr" data-correct="C">A) Perechile VIII, IX, X</p>
       <p class="rasr" >B) Ultimele 2 perechi</p>
-      <p class="rasr" >C) Perechile VIII, IX, X</p>
+      <p class="rasr" >C) Primele 7 perechi</p>
       <p class="rasr" >D) Niciuna</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
