--- a/test4s.html
+++ b/test4s.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce rol au oasele în susținerea și locomoția corpului?</p>
-      <p class="rasr" data-correct="A">A) Formează articulații rigide</p>
+      <p class="rasr" data-correct="B">A) Formează articulații rigide</p>
       <p class="rasr" >B) Acționează ca pârghii pentru mușchi</p>
       <p class="rasr" >C) Nu au un rol direct în mișcare</p>
       <p class="rasr" >D) Protejează doar organele vitale</p>
@@ -40,7 +40,7 @@
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care dintre următoarele structuri osoase protejează encefalul?</p>
       <p class="rasr" data-correct="A">A) Cervicală și lombară</p>
-      <p class="rasr" >B) Toracală și sacrală</p>
+      <p class="rasr" >B) Cutia craniană</p>
       <p class="rasr" >C) Coccigiană</p>
       <p class="rasr" >D) Toate regiunile</p>
       <button class="verifca">✔ Verifica</button>
@@ -74,16 +74,16 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce tip de pârghie formează articulația craniului cu coloana vertebrală?</p>
       <p class="rasr" >A) Pârghie de ordinul I</p>
-      <p class="rasr" data-correct="B">B) Pârghie de ordinul II</p>
+      <p class="rasr" data-correct="A">B) Pârghie de ordinul II</p>
       <p class="rasr" >C) Pârghie de ordinul III</p>
-      <p class="rasr" >D) Nu este o pârghie</p>
+      <p class="rasr" >D) Niciun raspuns corect</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
      </div>
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce rol au oasele în metabolismul mineralelor?</p>
-      <p class="rasr" data-correct="A">A) Nu au nicio contribuție</p>
+      <p class="rasr" data-correct="B">A) Nu au nicio contribuție</p>
       <p class="rasr" >B) Depozitează și eliberează calciu și fosfor</p>
       <p class="rasr" >C) Asigură doar protecție mecanică</p>
       <p class="rasr" >D) Sunt responsabile doar de hematopoieză</p>
@@ -93,7 +93,7 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Unde se află măduva hematogenă la adult?</p>
-      <p class="rasr" data-correct="A">A) În toate oasele</p>
+      <p class="rasr" data-correct="B">A) În toate oasele</p>
       <p class="rasr" >B) În oasele lungi</p>
       <p class="rasr" >C) În oasele late</p>
       <p class="rasr" >D) În toate articulațiile</p>
@@ -103,10 +103,10 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Cum ajută oasele la protecția împotriva toxinelor?</p>
-      <p class="rasr" data-correct="A">A) Le descompun rapid</p>
-      <p class="rasr" >B) Le rețin și le eliberează treptat</p>
+      <p class="rasr" data-correct="D">A) Le descompun rapid</p>
+      <p class="rasr" >B) Le neutralizează complet</p>
       <p class="rasr" >C) Nu au nicio influență</p>
-      <p class="rasr" >D) Le neutralizează complet</p>
+      <p class="rasr" >D) Le rețin și le eliberează treptat</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
      </div>
@@ -117,8 +117,8 @@
           <div class="coloane-content">
             <p class="optiuni">1.Oasele lungi<input type="text" id="match5" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">2.Oasele late<input type="text" id="match6" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">3.Măduva roșie<input type="text" id="match7" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">4.Măduva galbenă<input type="text" id="match8" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">3.Oase scurte<input type="text" id="match7" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">4.Bazin osos<input type="text" id="match8" class="match-box" placeholder="Ex: B"></p>
           </div>
         </div>
         <div class="coloane">
@@ -126,8 +126,8 @@
           <div class="coloane-content">
             <p class="optiuni">a.Pârghii pentru mișcare</p>
             <p class="optiuni">b.Sediu al hematopoiezei</p>
-            <p class="optiuni">c.Producerea celulelor sangvine</p>
-            <p class="optiuni">d.Țesut adipos de rezervă</p>
+            <p class="optiuni">c.Protejeaza organe pelvine</p>
+            <p class="optiuni">d.Retin substante toxice</p>
           </div>
         </div>
       </div><button class="check-btn" onclick="checkMatching2()">✔ verifica</button>
