--- a/test6s.html
+++ b/test6s.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este rolul principal al oaselor în aparatul locomotor?</p>
-      <p class="rasr" data-correct="A">A) Depozitarea mineralelor</p>
+      <p class="rasr" data-correct="B">A) Depozitarea mineralelor</p>
       <p class="rasr" >B) Acționează ca pârghii pentru mușchi</p>
       <p class="rasr" >C) Producția de celule sangvine</p>
       <p class="rasr" >D) Reținerea substanțelor toxice</p>
@@ -97,9 +97,9 @@
         <div class="cuti1">
       <h2 class="aleg">6. Găsiți răspunsul greșit:</h2>
       <p class="intrebare"></p>
-      <p class="rasr" data-correct="A">A) Sunt articulații sinoviale</p>
-      <p class="rasr" >B) Sunt complet imobile</p>
-      <p class="rasr" >C) Permit mișcări ample</p>
+      <p class="rasr" data-correct="C">A) Sunt articulații sinoviale</p>
+      <p class="rasr" >B) Permit mișcări ample</p>
+      <p class="rasr" >C) Sunt complet imobile</p>
       <p class="rasr" >D) Conțin lichid sinovial</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
@@ -107,10 +107,10 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este particularitatea metabolică a țesutului osos?</p>
-      <p class="rasr" data-correct="A">A) Are o mare afinitate pentru sărurile minerale</p>
+      <p class="rasr" data-correct="D">A) Este alcătuit exclusiv din hidroxiapatită</p>
       <p class="rasr" >B) Conține doar colagen și apă</p>
       <p class="rasr" >C) Nu suferă modificări chimice</p>
-      <p class="rasr" >D) Este alcătuit exclusiv din hidroxiapatită</p>
+      <p class="rasr" >D) Are o mare afinitate pentru sărurile minerale</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
      </div>
@@ -140,7 +140,7 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce rol are lichidul sinovial în articulațiile mobile?</p>
-      <p class="rasr" data-correct="A">A) Permite o fixare mai bună a oaselor</p>
+      <p class="rasr" data-correct="B">A) Permite o fixare mai bună a oaselor</p>
       <p class="rasr" >B) Reduce frecarea și asigură lubrifierea</p>
       <p class="rasr" >C) Face articulația mai rigidă</p>
       <p class="rasr" >D) Favorizează osificarea articulației</p>
@@ -150,7 +150,7 @@
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care dintre următoarele NU este un tip de sinartroză?</p>
-      <p class="rasr" data-correct="A">A) Sindesmoză</p>
+      <p class="rasr" data-correct="B">A) Sindesmoză</p>
       <p class="rasr" >B) Artrodie</p>
       <p class="rasr" >C) Sincondroză</p>
       <p class="rasr" >D) Sinostoză</p>
@@ -160,6 +160,6 @@
   </div>
 
   <script src="scripthub.js"></script>
-  <script src="scriptexerciti.js"></script>
+  <script src="scriptexerctitiT6S.js"></script>
 </body>
 </html>
